se agrego maquetación de editar cuenta

--- a/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
+++ b/Woo-ChapinFront/src/app/components/global/navbar/navbar.component.html
@@ -53,7 +53,7 @@
             Mi Cuenta
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Mi Cuenta</a>
+            <a class="dropdown-item" routerLink="miCuenta/editar">Mi Cuenta</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logOut()">Cerrar Sesión</a>
           </div>
